# sonancelang

./: .gitignore  Cargo.toml  README.md  build.rs  t.txt  test.sh
dreamland/: hello_world.son  option.son
examples/: array.son  cat.son  echo.son  fizzbuzz.son  hello_world.son  usize_add.son
examples/future/: array.son  cat.son  simple.son  tokenizer.son  usize_add.son
examples/iter3/: echo.son  hello_world.son  print_fib.son
examples/syntax_tests/: lisp_test.son  ws_no_paren_test.son  ws_test.son
notes/old_parser_code/: test.lalrpop
output/: num.wasm
prototype3/: Cargo.toml  README.md  test.sh
prototype3/src/: lib.rs  main.rs
prototype3/src/ast/: mod.rs  structure.rs
prototype3/src/backend/: mod.rs
prototype3/src/semantic/: common.rs  mod.rs
prototype4/: Cargo.toml  README.md  build.rs
prototype4/examples/: input.son
prototype4/src/: lib.rs  main.rs
prototype4/src/ast/: grammar.lalrpop  mod.rs
src/: ast.rs  codegen.rs  expr.lalrpop  generate.rs  grammar.lalrpop  jit.rs  lex.rs  lib.rs  lowlevel.rs  main.rs  parse.rs  parser.lalrpop  parser.rs  test.rs  visitor.rs
src/ast/: display.rs  grammar.lalrpop  mod.rs  structure.rs
src/backend/: display.rs  from_semantic.rs  id.rs  mod.rs  structure.rs  visit_ast.rs
src/ir/: from_semantic.rs  mod.rs  structure.rs
src/jit/: mod.rs  visit_ast.rs
src/lowlevel/: generate.rs  mod.rs  structure.rs
src/parse/: generate.rs  mod.rs  structure.rs
src/semantic/: common.rs  context.rs  from_ast.rs  from_parse.rs  mod.rs  structure.rs  symbol_table.rs
src/stages/: codegen.rs  mod.rs  parse.rs
src/wasm/: from_ir.rs  mod.rs  structure.rs
(+29 files in other folders)
